# try-sqlx-0.7

./: .env  Cargo.toml  docker-compose.yml  schema.sql
src/: main.rs
