[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7.0", features = ["mysql", "runtime-tokio-rustls", "chrono", "bigdecimal"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.6"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
